--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 			<version>1.18.10</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 
 		<!-- hikari -->
 		<dependency>
@@ -103,12 +103,26 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.4</version>
 		</dependency>
-<!-- https://mvnrepository.com/artifact/taglibs/standard -->
-<dependency>
-    <groupId>taglibs</groupId>
-    <artifactId>standard</artifactId>
-    <version>1.1.2</version>
-</dependency>
+		<!-- Java Mail API -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+
+			<artifactId>spring-context-support</artifactId>
+
+			<version>4.1.6.RELEASE</version>
+
+		</dependency>
+
 
 		<!-- AspectJ -->
 		<dependency>
