--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-target\m2e-wtp\web-resources\META-INF\maven\it.company\noname\pom.properties
+target/m2e-wtp/web-resources/META-INF/maven/it.company/noname/pom.properties
